# cpp-library-template

./: .gitignore  CMakeLists.txt  README.md
cmake/: doctest.cmake  doctestAddTests.cmake  tools.cmake
example/: run.sh  test.cpp
scripts/: all.sh  build.sh  dev.sh  test.sh
test/: CMakeLists.txt
test/source/: greeter.cpp
workflows/: documentation.yaml  install.yml  macos.yml  style.yml  ubuntu.yml  windows.yml
